--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <p>Edición1</p>
     <p>CambioGitHubEjercicio13</p>
     <p>edicion Practica2 ej25</p>
+    <h1>edicion rama1 github</h1>
 </body>
 </html>
